--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466 4.176 9.032Zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46l-3.892-1.556Z"/>
               </svg> BACHELORS OF TECHNOLOGY</h5>
                 <p> ENGINEERING (2020-2024)<br />
-                Under Graduate (III year)<br />
+                Under Graduate (IV year)<br />
                 NATIONAL INSTITUTE OF TECHNOLOGY ANDHRA PRADESH<br />
                 CGPA: 7.52 (6 Semesters)<br /></p>
                 </div>
