--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="card shadow-sm">
                 <img src="./assets/images/Ventilatorprjct.png" width="100%" height="225" alt="image of the smoke detector circuit made" />
                   <div class="card-body">
-                    <p class="card-text">This ventilator prototype is implemented using simple DC motor speed control and is hence cost-efficient and can be developed fully. It is a solution to the unmet demand and supply of portable and effective ventilators. A mechanical arm is used to ecert force on the medical bvm so it pumps air under pressure required to aid the breathing requirement of patient.</p>
+                    <p class="card-text">This ventilator prototype is implemented using simple DC motor speed control and is hence cost-efficient and can be developed fully. It is a solution to the unmet demand and supply of portable and effective ventilators. A mechanical arm is used to exert force on the medical bvm so it pumps air under pressure required to aid the breathing requirement of patient.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
